--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <nav class="blue darken-2">
         <div class="container">
           <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">WPU</a>
+            <a href="#!" class="brand-logo">ceritanya buat logo</a>
             <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="">About Us</a></li>
+              <li><a href="">About</a></li>
               <li><a href="">Clients</a></li>
               <li><a href="">Services</a></li>
               <li><a href="">Portfolio</a></li>
-              <li><a href="">Contact Us</a></li>
+              <li><a href="">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -38,11 +38,11 @@
 
     <!-- sidenav -->
     <ul class="sidenav" id="mobile-nav">
-      <li><a href="">About Us</a></li>
+      <li><a href="">About</a></li>
       <li><a href="">Clients</a></li>
       <li><a href="">Services</a></li>
       <li><a href="">Portfolio</a></li>
-      <li><a href="">Contact Us</a></li>
+      <li><a href="">Contact</a></li>
     </ul>
 
     <!-- slider -->
@@ -78,7 +78,7 @@
         <div class="row">
           <h3 class="center light grey-text text-darken-3">About Us</h3>
           <div class="col m6 light">
-            <h5>We Are Professionals</h5>
+            <h5>Professional Working</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi quo accusantium repellat similique ipsa doloribus in aliquam earum eaque, possimus necessitatibus sunt repellendus ullam recusandae voluptas dolore debitis saepe facere.</p>
           </div>
           <div class="col m6 light">
@@ -90,10 +90,13 @@
             <div class="progress">
                 <div class="determinate blue" style="width: 85%"></div>
             </div>
-            <p>GAME DEVELOPMENT</p>
+            <p>MACHINE LEARNING SPECIALIST</p>
             <div class="progress">
                 <div class="determinate blue" style="width: 90%"></div>
             </div>
+            <p>DATA ANALYST</p>
+            <div class="progress">
+              <div class="determinate blue" style="width: 90%"></div>
           </div>
         </div>
       </div>
